gitops/apps/media/nzbget/templates/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nzbget-http
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.1.230"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nzbget.frame.chalupatech.com`)
      kind: Rule
      services:
        - name: nzbget
          port: 6789
      middlewares:
        - name: redirect-to-https
          namespace: media
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nzbget-https
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.1.230"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nzbget.frame.chalupatech.com`)
      kind: Rule
      services:
        - name: nzbget
          port: 6789
  tls: {}
